# Meeting-Scribe-API

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main_meetingscribe-api.yml
files/: models.py  serializers.py  services.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_rename_extention_audiofile_extension.py
meetingscribe/: asgi.py  settings.py  urls.py  wsgi.py
summarizer/: models.py  serializers.py  services.py  urls.py  views.py
summarizer/migrations/: 0001_initial.py  0002_summary_subject.py  0003_alter_actionitem_due_date.py
transcription/: models.py  serializers.py  services.py  urls.py  views.py
transcription/migrations/: 0001_initial.py
users/: models.py  serializers.py  services.py  signals.py
users/migrations/: 0001_initial.py
